--- a/MailApi.MailServer/MailApi.MailServer.csproj
+++ b/MailApi.MailServer/MailApi.MailServer.csproj
@@ -43,13 +43,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
+    <Compile Include="Extenders\ExtendAliases.cs" />
+    <Compile Include="Extenders\ExtendAccounts.cs" />
+    <Compile Include="Extenders\ExtendDomains.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MailApi.Lib\MailApi.Lib.csproj">
       <Project>{82976165-DB61-40ED-B168-92085C56CE83}</Project>
       <Name>MailApi.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
